# JobScrabber

./: .gitignore  LICENSE  README.md  README.rst  alembic.ini  pyproject.toml
mig/: env.py
parser_rabota/: dev.py  headhunter.py  main.py  proxy_for_rabota.py  python.csv  save.py
parser_rabota/fast_graber/: config.py  db.py  dev_parser.py  hh_parser.py  main.py  models.py
parser_rabota/fast_graber/tel_bot/: all.py  db.py  handlers.py  main.py
parser_rabota/pand/: my_data.ipynb
parser_rabota/tel_bot/: main.py
parser_rabota/web/: export.py  main.py  main_mongo.py  models.py  mongo_test.py  parser.db  parser.py  react.csv
parser_rabota/web/templates/: home.html  report.html
tests/: test_parser_rabota.py
