[tool.poetry]
name = "parser_rabota"
version = "0.1.0"
description = ""
authors = ["AndreyeuIvan <andreeviv@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
aiogram = "^2.11.2"
Flask-SQLAlchemy = "^2.4.4"
SQLAlchemy = "^1.3.23"
html5lib = "^1.1"
pymongo = "^3.11.3"
Flask-PyMongo = "^2.3.0"
dnspython = "^2.1.0"
asyncpg = "^0.25.0"
aioredis = "^2.0.0"
tortoise = "^0.1.1"
aerich = "^0.5.8"
psycopg2 = "^2.9.3"
lxml = "^4.8.0"
pandas = "^1.4.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
